--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
   <a routerLink="/profile" routerLinkActive="active">Profile route</a>
 </nav>
 <router-outlet></router-outlet>
+<spinner-component [spinnerShow]="loading"></spinner-component>
