--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Angular Router</h1>
+<h1>NgRx resolve data example</h1>
 <nav>
   <a routerLink="/">Default</a>
   <a routerLink="/profile" routerLinkActive="active">Profile route</a>
